# pc-optimizer-lite

./: .gitignore  CLAUDE.md  PC Optimizer Lite Onedir.spec  PC Optimizer Lite.spec  README.md  RELEASE.md  build.bat  build.ps1  main.py  pyproject.toml  release_notes_v1.3.8.md  release_notes_v1.3.9.md  release_notes_v1.4.0.md  release_notes_v1.5.0.md  release_notes_v1.5.1.md  release_notes_v1.5.2.md  release_notes_v1.5.3.md  requirements.txt
.codex-patches/: pc-optimizer-lite-1.3.3.patch.gz.b64
.github/workflows/: build.yml  codex-apply-1-3-3.yml
docs/superpowers/plans/: 2026-06-25-fix-input-lag.md
installer/: PC Optimizer Lite.iss  install.ps1  installer_app.py
pc_optimizer_lite/: __init__.py  autostart.py  background_load.py  config.py  cpu_optimizer.py  cpu_temperature.py  cpu_throttler.py  gpu_acceleration.py  gui.py  history_manager.py  monitor.py  notifier.py  optimize_action.py  optimizer.py  pagefile.py  process_safety.py  pyside_gui.py  ram_cleaner.py  runtime_policy.py  sleep_manager.py  smart_process_manager.py  startup_manager.py  ui_model.py  updater.py  version.py  visual_effects.py  whitelist.py
pc_optimizer_lite/safety/: __init__.py  activity_detector.py
tests/: test_core.py  test_cpu_temperature.py  test_gpu_acceleration.py  test_startup_manager.py
tools/: create_icon.py
