[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pc-optimizer-lite"
version = "1.3.9"
description = "Lightweight passive PC resource monitor and optimizer"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "psutil>=5.9",
  "plyer>=2.1",
  "pystray>=0.19",
  "Pillow>=10.0",
  "PySide6>=6.7",
  "pywin32>=306; platform_system == 'Windows'",
]

[project.scripts]
pc-optimizer-lite = "main:main"

